# gevrek

./: .editorconfig  .ghci  .gitignore  CHANGELOG.md  Prelude.lua  cabal.project  cabal.project.freeze  casetest1.gevrek  casetest1.lua  example.gevrek  explicit.gevrek  explicit.lua  flake.nix  fourmolu.yaml  gevrek.abnf  gevrek.cabal  test.lua
app/: Main.hs
examples/: easycase.gevrek  easycase.lua  factorial.gevrek  factorial.lua  fibonacci.gevrek  fibonacci.lua  identity.gevrek  identity.lua  identity2.lua  out.lua  xor.gevrek  xor.lua
src/: AST.hs  Core.hs  CoreToLua.hs  Lexer.hs  Parser.hs  Token.hs  Typecheck.hs
src/Lua/: AST.hs  Pretty.hs
test/: Main.hs
